<resources>
    <string name="app_name">SpaceX Past Tracker</string>
    <string name="fragment_name_past_launches">Past Launches</string>
    <string name="fragment_name_launch_details">Launch Details</string>
    <string name="fragment_name_about">About</string>
    <string name="mission_patch_image">Mission Patch Image</string>
    <string name="mission_name">Mission Name</string>
    <string name="flight_number">Flight Number</string>
    <string name="launch_date">Launch Date</string>
    <string name="launch_location">Launch Location</string>
    <string name="about_text">
        Android Application to track SpaceX past launches<br />
        <b>Tech Stack:</b><br />
        1. Kotlin<br />
        2. MVVM<br />
        3. Live Data<br />
        4. Retrofit<br />
        5. Coroutine<br />
        6. Navigation<br />
        7. Paging<br />
        8. Data Binding<br />
        9. DI - Dagger Hilt
    </string>
    <string name="rocket">Rocket</string>
    <string name="video_view_placeholder">Video view placeholder</string>
    <string name="description">Description</string>
    <string name="label">Label</string>
    <string name="label_text">Label Text</string>
    <string name="value_text">Value Text</string>
    <string name="generic_error_title">Error</string>
    <string name="generic_error_sub_title">Please try again</string>
    <string name="no_detail_available_text">No details available right now</string>
    <string name="no_detail_available">No details available about this mission</string>
    <string name="launch_success">Success</string>
    <string name="article_link">Article Link</string>
    <string name="reddit_campaign_link">Reddit Campaign Link</string>
    <string name="reddit_media_link">Reddit Media Link</string>
    <string name="wiki_link">Wikipedia Link</string>
    <string name="video_link">Youtube Link</string>
    <string name="header_text">Header</string>
    <string name="details_header_text">DETAILS</string>
    <string name="loading_error">Error while loading data…</string>
    <string name="retry">Retry</string>
    <string name="empty_error">No more results!!!</string>
    <string name="youtube_link">Youtube Link</string>
    <string name="too_long_to_respond_error">Sorry! Couldn\'t fetch past launches!!! Check your internet connection and retry again…</string>
    <string name="results_could_not_be_loaded">Sorry! Couldn\'t load more results…</string>
    <string name="no_network_error">Please connect to internet and retry to fetch past launches!!!</string>
    <string name="loading">Loading…</string>
</resources>