<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.experiment.android.spacexpastlaunchtracker.models.MainDetailsModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/item_more_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardBackgroundColor"
        android:elevation="@dimen/elevation_5dp"
        android:paddingStart="@dimen/padding_2dp"
        android:paddingTop="@dimen/padding_10dp"
        android:paddingEnd="@dimen/padding_2dp"
        android:paddingBottom="@dimen/padding_10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/roboto_medium_italic"
                android:padding="@dimen/padding_5dp"
                android:text="@string/details_header_text"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintBottom_toTopOf="@id/tv_value_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_value_1"
                style="@style/Widget.SpaceX.TextView.LaunchDetailsValueStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_10dp"
                app:intToString="@{model.flightNumber}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_label_1"
                app:layout_constraintTop_toBottomOf="@id/tv_header"
                tools:text="@string/value_text" />

            <TextView
                android:id="@+id/tv_label_1"
                style="@style/Widget.SpaceX.TextView.LaunchDetailsLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:text="@string/flight_number"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_value_1"
                app:layout_constraintEnd_toStartOf="@+id/tv_value_1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/label_text" />

            <TextView
                android:id="@+id/tv_label_2"
                style="@style/Widget.SpaceX.TextView.LaunchDetailsLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:text="@string/launch_location"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_value_2"
                app:layout_constraintEnd_toStartOf="@+id/tv_value_2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/label_text" />

            <TextView
                android:id="@+id/tv_value_2"
                style="@style/Widget.SpaceX.TextView.LaunchDetailsValueStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_10dp"
                android:text="@{model.launchSiteNameLong}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_label_2"
                app:layout_constraintTop_toBottomOf="@+id/tv_value_1"
                tools:text="@string/value_text" />

            <TextView
                android:id="@+id/tv_label_3"
                style="@style/Widget.SpaceX.TextView.LaunchDetailsLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:text="@string/launch_date"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_value_3"
                app:layout_constraintEnd_toStartOf="@+id/tv_value_3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/label_text" />

            <TextView
                android:id="@+id/tv_value_3"
                style="@style/Widget.SpaceX.TextView.LaunchDetailsValueStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_label_3"
                app:layout_constraintTop_toBottomOf="@+id/tv_value_2"
                app:utcToLocal="@{model.launchDateUtc}"
                tools:text="@string/value_text" />

            <TextView
                android:id="@+id/tv_label_4"
                style="@style/Widget.SpaceX.TextView.LaunchDetailsLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:text="@string/launch_success"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_value_4"
                app:layout_constraintEnd_toStartOf="@+id/tv_value_4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/label_text" />

            <TextView
                android:id="@+id/tv_value_4"
                style="@style/Widget.SpaceX.TextView.LaunchDetailsValueStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_10dp"
                app:launchSuccess="@{model.launchSuccess}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_label_4"
                app:layout_constraintTop_toBottomOf="@+id/tv_value_3"
                tools:text="@string/value_text" />

            <TextView
                android:id="@+id/tv_label_5"
                style="@style/Widget.SpaceX.TextView.LaunchDetailsLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:text="@string/rocket"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_value_5"
                app:layout_constraintEnd_toStartOf="@+id/tv_value_5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/label_text" />

            <TextView
                android:id="@+id/tv_value_5"
                style="@style/Widget.SpaceX.TextView.LaunchDetailsValueStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_10dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_label_5"
                app:layout_constraintTop_toBottomOf="@+id/tv_value_4"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/value_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>