<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.experiment.android.kotlinmvvmpaging.ui.pastlaunches.PastLaunchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/container_custom_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/tv_msg_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible">

            <com.experiment.android.spacexpastlaunchtracker.utils.custom.CustomDottedProgressBar
                android:id="@+id/custom_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_msg_error"
            style="@style/Widget.SpaceX.TextView.ErrorTextViewMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/too_long_to_respond_error"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btn_retry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_retry"
            style="@style/Widget.SpaceX.Button.ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/retry"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_msg_error"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/iv_no_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:src="@drawable/ic_connection_error"
            app:layout_constraintBottom_toTopOf="@id/tv_msg_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_empty_error"
            style="@style/Widget.SpaceX.TextView.ErrorTextViewMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:text="@string/empty_error"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
